# icelang

./: CNAME  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml
assets/: icelang_wasm_bg-0ca99aef.wasm  icelang_wasm_bg-dd3249c8.wasm  icelang_wasm_bg-e1772012.wasm  index-20d6af17.css  index-22c7170d.js  index-45a6afe1.js  index-502477d8.js  index-801208ea.css  index-93f04d18.js  index-9d2049c7.js  index-b2dabbd2.js
cli/: Cargo.toml
cli/src/: highlighter.rs  lib.rs  validator.rs
examples/: binary_search.ic  fibonacci.ic  hello_module.ic  linked_list.ic  module.ic
interpreter/: Cargo.toml
interpreter/src/: builtin.rs  environment.rs  error.rs  lib.rs  value.rs
lexer/: Cargo.toml
lexer/src/: errors.rs  lib.rs  tokens.rs  utils.rs
mock/: syntax.ic
parser/: Cargo.toml
parser/src/: ast.rs  error.rs  lib.rs
src/: lexer.rs  lib.rs  main.rs  tokens.rs
src/cli/: highlighter.rs  mod.rs  prompt.rs  validator.rs
src/lexer/: mod.rs  tokens.rs  utils.rs
src/parser/: ast.rs  error.rs  mod.rs  parser.rs
src/runtime/: builtin.rs  environment.rs  error.rs  interpreter.rs  mod.rs  value.rs
src/tokenizer/: errors.rs  lexer.rs  mod.rs  tokens.rs  utils.rs
wasm/: Cargo.toml
wasm/src/: builtins.rs  lib.rs
wasm/website/: index.html  package-lock.json  package.json  tailwind.config.cjs
wasm/website/src/: App.tsx  index.css
wasm/website/src/components/: CodeBlock.tsx  Footer.tsx  Navbar.tsx  Overview.tsx  Playground.tsx  Section.tsx  index.tsx
wasm/website/src/hooks/: UseScroll.ts
wasm/website/src/static/: overview.ts
wasm/website/src/utils/: icelang.terms.js  language.js
website/: index.html  package-lock.json  package.json  pre-build.sh  vite.config.ts
website/src/: App.tsx  index.css
website/src/components/: Container.tsx  Landing.tsx  Navbar.tsx
website/src/static/: overview.ts
website/src/utils/: icelang.grammar  icelang.js  language.js
