[package]
name = "icelang"
version = "0.1.0"
edition = "2021"
authors = ["LIOKA Ranarison Fiderana <luckasranarison@gmail.com>"]
keywords = ["scripting-language", "interpreter"]
repository = "https://github.com/luckasranarison/icelang"
categories = ["interpreter"]
license = "MIT"

[[bin]]
name = "icelang"
path = "src/main.rs"

[workspace]
members = ["cli", "lexer", "parser", "interpreter", "wasm"]

[dependencies]
cli = { path = "cli"}
lexer = { path = "lexer"}
parser = { path = "parser"}
interpreter = { path = "interpreter"}
