[package]
name = "icelang-wasm"
version = "0.1.0"
edition = "2021"
authors = ["LIOKA Ranarison Fiderana <luckasranarison@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

lexer = { path = "../lexer"}
parser = { path = "../parser"}
interpreter = { path = "../interpreter"}

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]